# aero_atmos

./: .gitignore  Cargo.toml  GREEK.md  ISA.md  PRESSURE.md  README.md
.github/workflows/: rust.yml
src/: icao_standard_atmos.rs  intl_standard_atmos.rs  lib.rs  macros.rs  main.rs  us_standard_atmosphere.rs
tests/: isa_tests.rs
